# Generated by Django 5.2 on 2025-08-02 03:14

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('petpalapp', '0002_userprofile'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Pet',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100)),
                ('slug', models.SlugField(blank=True, unique=True)),
                ('age', models.CharField(help_text="e.g., '2 months', '1 year', '3 years'", max_length=20)),
                ('gender', models.CharField(choices=[('male', 'Male'), ('female', 'Female')], max_length=10)),
                ('price', models.DecimalField(decimal_places=2, help_text='Price in USD', max_digits=8)),
                ('description', models.TextField(help_text='Detailed description of the pet')),
                ('image', models.ImageField(help_text='Main pet photo', upload_to='pets/')),
                ('image2', models.ImageField(blank=True, help_text='Additional photo', null=True, upload_to='pets/')),
                ('image3', models.ImageField(blank=True, help_text='Additional photo', null=True, upload_to='pets/')),
                ('weight', models.CharField(blank=True, help_text="e.g., '5 kg', '15 lbs'", max_length=20)),
                ('color', models.CharField(blank=True, help_text="Pet's color/markings", max_length=50)),
                ('vaccination_status', models.BooleanField(default=False, help_text='Is the pet vaccinated?')),
                ('health_certificate', models.BooleanField(default=False, help_text='Has health certificate?')),
                ('city', models.CharField(help_text='City where pet is located', max_length=100)),
                ('state', models.CharField(help_text='State/Province', max_length=50)),
                ('status', models.CharField(choices=[('available', 'Available'), ('pending', 'Pending'), ('sold', 'Sold/Adopted')], default='available', max_length=20)),
                ('is_featured', models.BooleanField(default=False, help_text='Show in featured section')),
                ('is_urgent', models.BooleanField(default=False, help_text='Urgent adoption/sale')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('breed', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pets', to='petpalapp.breed')),
                ('seller', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pets_for_sale', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
    ]
