# Generated by Django 5.2 on 2025-11-05 01:27

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('petpalapp', '0012_listingpayment'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='ListingPrice',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('price', models.DecimalField(decimal_places=2, default=100.0, help_text='Listing fee in NPR', max_digits=10)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('updated_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='listing_price_updates', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Listing Price Configuration',
                'verbose_name_plural': 'Listing Price Configuration',
            },
        ),
    ]
