# Generated by Django 5.2 on 2025-11-05 05:22

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('petpalapp', '0014_remove_listingpayment_is_used_and_more'),
    ]

    operations = [
        migrations.CreateModel(
            name='FeatureCard',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=100)),
                ('description', models.TextField(max_length=200)),
                ('icon', models.CharField(default='fas fa-paw', help_text="Font Awesome icon class (e.g., 'fas fa-paw')", max_length=50)),
                ('image', models.ImageField(blank=True, help_text='Optional image instead of icon', null=True, upload_to='homepage/features/')),
                ('link', models.CharField(blank=True, help_text='Link URL (optional)', max_length=200)),
                ('is_active', models.BooleanField(default=True)),
                ('order', models.IntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'verbose_name': 'Feature Card',
                'verbose_name_plural': 'Feature Cards',
                'ordering': ['order', 'title'],
            },
        ),
        migrations.CreateModel(
            name='HeroSection',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(default='Find Your Perfect Companion', max_length=200)),
                ('subtitle', models.CharField(default='Discover loving pets and quality accessories', max_length=300)),
                ('background_image', models.ImageField(help_text='Hero background image (recommended: 1920x800px)', upload_to='homepage/hero/')),
                ('cta_text', models.CharField(default='Browse Pets', help_text='Call-to-action button text', max_length=50)),
                ('cta_link', models.CharField(default='/browse-pets/', help_text='Button link URL', max_length=200)),
                ('is_active', models.BooleanField(default=True)),
                ('order', models.IntegerField(default=0, help_text='Display order (lower numbers first)')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Hero Section',
                'verbose_name_plural': 'Hero Sections',
                'ordering': ['order', '-created_at'],
            },
        ),
        migrations.CreateModel(
            name='HomePageSettings',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('site_name', models.CharField(default='PetPal', max_length=100)),
                ('tagline', models.CharField(default='Your Trusted Pet Marketplace', max_length=200)),
                ('about_section_title', models.CharField(default='About PetPal', max_length=100)),
                ('about_section_text', models.TextField(default='We connect loving families with their perfect pets.')),
                ('about_image', models.ImageField(blank=True, null=True, upload_to='homepage/')),
                ('show_featured_pets', models.BooleanField(default=True, help_text='Show featured pets section')),
                ('show_testimonials', models.BooleanField(default=True, help_text='Show testimonials section')),
                ('show_features', models.BooleanField(default=True, help_text='Show features section')),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Homepage Settings',
                'verbose_name_plural': 'Homepage Settings',
            },
        ),
        migrations.CreateModel(
            name='Testimonial',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('customer_name', models.CharField(max_length=100)),
                ('customer_image', models.ImageField(blank=True, help_text='Customer photo (optional)', null=True, upload_to='homepage/testimonials/')),
                ('rating', models.IntegerField(default=5, help_text='Rating out of 5')),
                ('testimonial_text', models.TextField(max_length=500)),
                ('location', models.CharField(blank=True, help_text="e.g., 'Kathmandu, Nepal'", max_length=100)),
                ('is_active', models.BooleanField(default=True)),
                ('order', models.IntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'verbose_name': 'Testimonial',
                'verbose_name_plural': 'Testimonials',
                'ordering': ['order', '-created_at'],
            },
        ),
        migrations.AlterModelOptions(
            name='approvedpet',
            options={'verbose_name': 'Approved Pet', 'verbose_name_plural': '├─ Approved Pets'},
        ),
        migrations.AlterModelOptions(
            name='browsepet',
            options={'verbose_name': 'Professional Pet Listing', 'verbose_name_plural': 'Professional Pet Listings'},
        ),
        migrations.AlterModelOptions(
            name='marketplacepet',
            options={'verbose_name': 'User Submitted Pet', 'verbose_name_plural': 'User Marketplace Pets'},
        ),
        migrations.AlterModelOptions(
            name='pendingpet',
            options={'verbose_name': 'Pending Review', 'verbose_name_plural': '├─ Pending Review'},
        ),
        migrations.AlterModelOptions(
            name='rejectedpet',
            options={'verbose_name': 'Rejected Pet', 'verbose_name_plural': '└─ Rejected Pets'},
        ),
    ]
